[build-system]
requires = ["scikit-build-core"]
build-backend = "scikit_build_core.build"

[project]
name = "acts"
dynamic = ["version"]

[tool.scikit-build]
wheel.packages = [] # Manage installation with cmake
wheel.exclude = ["**.a", "**.sh", "**.cmake"]
wheel.license-files = ["LICENSE"]
build-dir = "build/{wheel_tag}"
build.verbose = true
cmake.args = ["--preset=python"]
logging.level = "DEBUG"

# Get version from file dynamically
[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.regex"
input = "./version_number"
regex = "^([0-9]+).([0-9]+).([0-9]+)$"
result = "{1}.{2}.{2}"
