[build-system]
requires = ["scikit-build-core"]
build-backend = "scikit_build_core.build"

[project]
name = "pyacts"
dynamic = ["version", "readme"]
license = "MPL-2.0"
license-files = ["LICENSE"]

[project.urls]
Homepage = "https://acts-project.github.io"
Repository = "https://github.com/acts-project/acts"

[tool.scikit-build]
wheel.packages = [] # Manage installation with cmake
wheel.exclude = ["**.a", "**.sh", "**.cmake", "**.hpp"]
build-dir = "build/{wheel_tag}"
build.verbose = true
cmake.args = ["--preset=python-wheel"]
logging.level = "DEBUG"
metadata.readme.provider = "scikit_build_core.metadata.fancy_pypi_readme"

# Get version from file dynamically
[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.regex"
input = "./version_number"
regex = "^([0-9]+).([0-9]+).([0-9]+)$"
result = "{0}.{1}.{2}"

[tool.hatch.metadata.hooks.fancy-pypi-readme]
content-type = "text/markdown"

[[tool.hatch.metadata.hooks.fancy-pypi-readme.fragments]]
text = """
<a href="https://github.com/acts-project/acts">
    <img src="https://github.com/acts-project/acts/blob/main/docs/figures/acts_logo_colored.svg" alt="ACTS logo">
</a>
"""

[[tool.hatch.metadata.hooks.fancy-pypi-readme.fragments]]
path = "README.md"
end-before = "## Quick start"
