[tool.poetry]
name = "acts-ci"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
PyGithub = "^1.51"
click = "^7.1.2"
halo = "^0.0.29"
PyYAML = "^5.3.1"
sh = "^1.13.1"
rich = "^3.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
